[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Screens/Name_side_Panal.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Prefab/MenuButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Prefab/BackButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Prefab/M_Like_btn.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Prefab/Main_Theme.tres" type="Theme" id=5]
[ext_resource path="res://Assets/Prefab/Detail_Theme.tres" type="Theme" id=6]
[ext_resource path="res://Assets/Prefab/Arabic_Theme.tres" type="Theme" id=7]
[ext_resource path="res://Resources/Fonts/English_T.otf" type="DynamicFontData" id=8]
[ext_resource path="res://Assets/Prefab/MenuButton_Allahs_Name.gd" type="Script" id=9]
[ext_resource path="res://Assets/Screens/Allah_Name_Detail.gd" type="Script" id=10]
[ext_resource path="res://Assets/Prefab/ScrollContainer.gd" type="Script" id=11]
[ext_resource path="res://Resources/UI/Rect.png" type="Texture" id=12]
[ext_resource path="res://Resources/UI/UnderShadow.png" type="Texture" id=13]
[ext_resource path="res://Resources/UI/Long_Rec_Base.png" type="Texture" id=14]
[ext_resource path="res://Assets/Prefab/Done_Button.tscn" type="PackedScene" id=15]

[sub_resource type="DynamicFont" id=4]
size = 45
outline_size = 1
outline_color = Color( 0.0745098, 0.105882, 0.164706, 1 )
use_filter = true
extra_spacing_top = 12
extra_spacing_bottom = 12
extra_spacing_char = 2
extra_spacing_space = 5
font_data = ExtResource( 8 )

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 2

[sub_resource type="Animation" id=1]
resource_name = "Load"
length = 0.25
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Allah_Name_Detail" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 10 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0.168627, 0.176471, 0.313726, 1 )

[node name="Detail_Area" type="TextureRect" parent="."]
unique_name_in_owner = true
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 14 )
expand = true
stretch_mode = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Detail_Area"]
anchor_left = 0.02
anchor_top = 0.22
anchor_right = 0.98
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 18.56
margin_right = 2.0
margin_bottom = -18.0
theme = ExtResource( 6 )
scroll_horizontal_enabled = false
script = ExtResource( 11 )
Scroll_Limit = 600

[node name="VBoxContainer" type="VBoxContainer" parent="Detail_Area/ScrollContainer"]
margin_right = 1036.8
margin_bottom = 1564.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 45

[node name="H3" type="Label" parent="Detail_Area/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 1036.0
margin_bottom = 159.0
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 4 )
text = "The Most Compassionate, Most Merciful."
autowrap = true

[node name="TextureRect" type="TextureRect" parent="Detail_Area/ScrollContainer/VBoxContainer/H3"]
material = SubResource( 3 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -45.0
margin_right = 55.0
texture = ExtResource( 13 )
stretch_mode = 1

[node name="P" type="Label" parent="Detail_Area/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 204.0
margin_right = 1036.0
margin_bottom = 353.0
theme = ExtResource( 6 )
text = "In the Name of Allah—the Most Compassionate, Most Merciful."
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="Detail_Area/ScrollContainer/VBoxContainer"]
margin_top = 398.0
margin_right = 1036.0
margin_bottom = 598.0
grow_horizontal = 2
rect_min_size = Vector2( 0, 200 )
alignment = 1

[node name="Like_btn" parent="Detail_Area/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
unique_name_in_owner = true
margin_left = 258.0
margin_right = 258.0
margin_bottom = 200.0
rect_scale = Vector2( 1, 1 )
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="Done_Button" parent="Detail_Area/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 15 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 778.0
margin_top = 0.0
margin_right = 778.0
margin_bottom = 200.0
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="Name_area" type="TextureRect" parent="."]
unique_name_in_owner = true
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.31
texture = ExtResource( 12 )
expand = true
stretch_mode = 1

[node name="H1" type="Label" parent="Name_area"]
unique_name_in_owner = true
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.3
margin_left = 45.0
margin_right = -45.0
margin_bottom = 262.0
theme = ExtResource( 7 )
text = "ﻪِﻠَّﻟﭐ ﻢِﺴْﺑِ"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="H2" type="Label" parent="Name_area"]
unique_name_in_owner = true
anchor_left = 0.06
anchor_top = 0.7
anchor_right = 0.93
anchor_bottom = 0.85
theme = ExtResource( 6 )
custom_colors/font_color = Color( 0.823529, 0.890196, 0.933333, 1 )
custom_colors/font_outline_modulate = Color( 0.823529, 0.890196, 0.933333, 1 )
text = "In the Name of Allah"
align = 1
autowrap = true

[node name="Name_Area_Click" type="TextureButton" parent="Name_area"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9

[node name="BackButton" parent="." instance=ExtResource( 3 )]
scene = "res://Assets/Screens/Names_Menu.tscn"

[node name="NameMenu" parent="." instance=ExtResource( 1 )]
visible = false

[node name="MenuButton" parent="." instance=ExtResource( 2 )]
anchor_left = 0.85
anchor_top = 0.05
anchor_right = 0.85
anchor_bottom = 0.05
script = ExtResource( 9 )
Text = "Name"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Load"
anims/Load = SubResource( 1 )
anims/RESET = SubResource( 2 )

[connection signal="Clicked_Like_btn" from="Detail_Area/ScrollContainer/VBoxContainer/HBoxContainer/Like_btn" to="." method="_on_Clicked_Like_btn"]
[connection signal="Clicked" from="Detail_Area/ScrollContainer/VBoxContainer/HBoxContainer/Done_Button" to="." method="_on_Done_Button_Clicked"]
[connection signal="pressed" from="Name_area/Name_Area_Click" to="." method="_on_Name_Area_pressed"]
[connection signal="New_Name" from="NameMenu" to="." method="_on_New_Name"]
[connection signal="pressed" from="MenuButton" to="MenuButton" method="_on_MenuButton_pressed"]
